<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LinearActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="#fff">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/menu"
            android:src="@drawable/ic_logo"/>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_radio"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="#000"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="#E80C0C">
        <android.widget.Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_speaker"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="30dp"
            android:background="#F00C0B0B"
            android:text="@string/speaker_search"
            android:textStyle="italic"
            android:textColor="#fff"
            android:textSize="30sp"/>
        <android.widget.Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_speaker"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="30dp"
            android:background="#F00C0B0B"
            android:text="@string/subject_search"
            android:textStyle="italic"
            android:textColor="#fff"
            android:textSize="30sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="#E9B3B2B2">
        <android.widget.Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_shuffle"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="80dp"
            android:background="#BEEFED74"
            android:text="@string/shuffle"
            android:textColor="#E9E60D0D"
            android:textSize="20sp"
            android:fontFamily="monospace"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_marginBottom="40dp"
            android:id="@+id/music_control"
            android:src="@drawable/ic_play"
            android:layout_below="@+id/btn_shuffle"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_17"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="220dp"
            android:textColor="#E9E60D0D"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:id="@+id/btn_view"
            android:background="#000"
            android:layout_marginHorizontal="90dp"
            android:layout_marginTop="220dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_47_17"
            android:layout_marginHorizontal="315dp"
            android:layout_marginTop="220dp"
            android:textColor="#E9070505"
            android:textSize="15sp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E62F302F">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="160dp"
            android:id="@+id/ras_img"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_ras"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/now_play"
            android:text="NOW PLAYING ..."
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="25dp"
            android:layout_toRightOf="@+id/ras_img"
            android:textColor="#E80C0C"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/ras_img" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ras_des"
            android:layout_below="@+id/now_play"
            android:layout_toRightOf="@+id/ras_img"
            android:text="@string/the_farce_side_of_life"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColor="#fff"
            android:layout_marginLeft="50dp"
            android:layout_toEndOf="@+id/ras_img"
            android:layout_marginStart="50dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ras_img"
            android:layout_below="@+id/ras_des"
            android:text="@string/bill_lewis_chris_brady_claude_hamilton_and_oriin_woodward"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="19sp"
            android:layout_toEndOf="@+id/ras_img"
            android:layout_marginStart="10dp" />



    </RelativeLayout>

</LinearLayout>